--- a/office works/intel.css
+++ b/office works/intel.css
@@ -174,3 +174,23 @@ body{
     gap: 0px;
 
 }
+
+.circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: white;
+    float: right;
+}
+
+.lowerpart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20vh auto 0 auto;
+    background-color:  white;
+    width:900px;
+    padding: 50px;
+
+}
