--- a/office works/intel.css
+++ b/office works/intel.css
@@ -1,6 +1,7 @@
 body{
     background: rgba(224, 224, 224, 0.425);
     font-family: 'Times New Roman', Times, serif;
+    
 }
 
 .header{
@@ -12,7 +13,7 @@ body{
      border-radius: 100px;
      padding: 10px;
      background-color: white;
-     width: 1300px;
+     width: 1000px;
      margin: auto auto auto ;
 }
 
@@ -192,5 +193,27 @@ body{
     background-color:  white;
     width:900px;
     padding: 50px;
-
+    gap: 5px;
+    border-radius: 20px;
 }
+
+.buss{
+   padding-left: 60px;
+}
+.sel{
+    width: 650px;
+    padding: 15px;
+    /* border: none; */
+    border-radius: 10px;
+}
+
+.footer{
+    font-weight: lighter;
+    font-size: 10px;
+}
+
+.foot{
+    align-items: center;
+    justify-content: space-evenly;
+}
+
