--- a/office works/intel.css
+++ b/office works/intel.css
@@ -203,7 +203,7 @@ body{
 .sel{
     width: 650px;
     padding: 15px;
-    /* border: none; */
+    border: 1px solid rgb(199, 199, 199);
     border-radius: 10px;
 }
 
@@ -217,3 +217,6 @@ body{
     justify-content: space-evenly;
 }
 
+.logo{
+    width: 30px;
+}
